Исправил алгоритм сохранения пароля Теперь это имеет смысл